CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

17 September 2007
+ Added notes to Mod_Rewrite doc.

13 September 2007
+ Uploaded PageSmith conversion. Still working out Menu kinks.
+ Rewrote large portions of Menu conversion to function better and
  work with pagesmith.
+ Added extra logic for Database to try to indexBy better.

Version 1.6.1
------------------------------------------------------------------
10 September 2007
+ Init.php - added dngettext replacement function 
+ Database.php - reindexSequenceTable now handles missing and empty
  tables 

6 September 2007
+ XMLRPC now handles media (i.e. graphic) uploads
+ Added appendSlash function to File. Was a often repeated function.
+ Fixed IXR_Library.inc.php. media function to trim string.
+ Fixed IXR date formatting.
+ Fixed several issues to make XMLRPC more compatible.
+ Added appendImages function to place url at front of image tags
+ removed record calls. Refined record function.

5 September 2007
+ File - Really, truly fixed the slash detection on copy_directory
  function. 
+ Database
  o Lowercased nulls.
  o loadObject will return an error if an object is submitted without
    an id. Added the name of the class to the error log to assist with
    debugging.
  o Adding module and class_name to getObjects was a big mistake. I
    forgot that extra args are sent to the class contructor. Created a
    function in Database called loadClass to replicate the
    functionality.
+ Comment added to Core
+ Moved Eloi's name up in credits for xmlrpc.
+ Core changes moved into new directory in
  core/boost/changes/. Shortens update file.


31 August 2007
+ Text
   o Bug #1781552. Shortened urls now adds 3 characters to balance
     '...' replacement.
   o Added newline check to collapseUrl function.
+ Editors
  o added yui, Yahoo!'s Rich text editor
  o Added autogrow to fckeditor and increased the height.

30 August 2007