@@ -1,3 +1,3 @@
-title = Convert Menu Manager
+title = Menu Manager conversion
 description = Converts old menu links to the new format
 convert = menus
