@@ -4,6 +4,7 @@ its own separate CHANGELOG file.
 
 17 September 2007
 + Added notes to Mod_Rewrite doc.
++ More work on Web Pages, PageSmith, and Menu conversion.
 
 13 September 2007
 + Uploaded PageSmith conversion. Still working out Menu kinks.
